force-app/main/default/objects/numm__NDFItem__c/numm__NDFItem__c.object-meta.xml
<CustomObject>
    <label>Ligne de note de frais</label>
    <nameField>
        <displayFormat>NDFI-{0000000}</displayFormat>
        <label>Nom de Ligne de note de frais</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ligne de note de frais</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>