force-app/main/default/objects/numm__NDFItem__c/fields/numm__Analytique03__c.field-meta.xml
<CustomField>
    <fullName>numm__Analytique03__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analytique 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__CostAccountingValues__c.numm__IdAxis__r.numm__RelatedAnalytics__c</field>
            <operation>equals</operation>
            <value>Analytique 3</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__CostAccountingValues__c</referenceTo>
    <relationshipLabel>Ligne de note de frais (Analytique 3)</relationshipLabel>
    <relationshipName>Ligne_de_note_de_frais2</relationshipName>
    <type>Lookup</type>
</CustomField>