force-app/main/default/objects/numm__NDFItem__c/fields/numm__Compte__c.field-meta.xml
<CustomField>
    <fullName>numm__Compte__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ligne de note de frais</relationshipLabel>
    <relationshipName>Ligne_de_note_de_frais</relationshipName>
    <type>Lookup</type>
</CustomField>