force-app/main/default/objects/numm__NDFItem__c/fields/numm__Designation__c.field-meta.xml
<CustomField>
    <fullName>numm__Designation__c</fullName>
    <label>Désignation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>