force-app/main/default/objects/numm__NDFItem__c/fields/numm__Justificatif__c.field-meta.xml
<CustomField>
    <fullName>numm__Justificatif__c</fullName>
    <label>Justificatif</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>