force-app/main/default/objects/numm__NDFItem__c/fields/numm__MT_HT__c.field-meta.xml
<CustomField>
    <fullName>numm__MT_HT__c</fullName>
    <label>Coût HT</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>