force-app/main/default/objects/numm__NDFItem__c/fields/numm__MT_TTC__c.field-meta.xml
<CustomField>
    <fullName>numm__MT_TTC__c</fullName>
    <formula>numm__MT_HT__c +  numm__MT_TVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant à payer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>