force-app/main/default/objects/numm__NDFItem__c/fields/numm__MT_TVA__c.field-meta.xml
<CustomField>
    <fullName>numm__MT_TVA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Montant TVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>