force-app/main/default/objects/numm__NDFItem__c/fields/numm__NDF__c.field-meta.xml
<CustomField>
    <fullName>numm__NDF__c</fullName>
    <label>Note de frais</label>
    <referenceTo>numm__NDF__c</referenceTo>
    <relationshipLabel>Ligne de note de frais</relationshipLabel>
    <relationshipName>Ligne_de_note_de_frais</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>