force-app/main/default/objects/numm__NDFItem__c/fields/numm__Produit__c.field-meta.xml
<CustomField>
    <fullName>numm__Produit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Produit</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le produit doit être coché Note de frais</errorMessage>
        <filterItems>
            <field>numm__Item__c.numm__IsNDF__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__Item__c</referenceTo>
    <relationshipLabel>Ligne de note de frais</relationshipLabel>
    <relationshipName>Ligne_de_note_de_frais</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>