force-app/main/default/objects/numm__NDFItem__c/validationRules/numm__DateDansPeriodeEntete.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__DateDansPeriodeEntete</fullName>
    <active>true</active>
    <errorConditionFormula>OR( numm__Date__c &lt; numm__NDF__r.numm__Date_Debut__c ,numm__Date__c &gt; numm__NDF__r.numm__Date_fin__c)</errorConditionFormula>
    <errorDisplayField>numm__Date__c</errorDisplayField>
    <errorMessage>La date n&#39;est pas comprise dans la période de la note de frais</errorMessage>
</ValidationRule>